<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application name -->
    <string name="app_name">WLanAdb</string>
    <!-- General strings -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading&#8230;</string>
    <!-- Menu items labels -->
    <string name="menu_settings">Settings</string>
    <string name="menu_test_connection">Test connection</string>
    <!-- Connection statuses -->
    <string name="connection_status_undefined">Sorry, it is not possible to start connection test now.</string>
    <string name="connection_status_ok">Connection test successfully passed.</string>
    <string name="connection_status_block">It seems you have filter for broadcast messages.</string>
    <!-- Logcat filter labels -->
    <string name="logcat_filter_hide_system_pids">Hide system applications</string>
    <!-- Preferences labels -->
    <string name="pref_client_settings">Client settings</string>
    <string name="pref_client_id_title">Client ID</string>
    <string name="pref_client_name_title">Client name</string>
    <string name="pref_security_settings">Security settings</string>
    <string name="pref_security_pin_title">PIN code</string>
    <string name="pref_security_pin_summary_not_set">Not secured</string>
    <string name="pref_security_pin_summary_set">Secured</string>
    <string name="pref_security_pin_show_password">Show PIN code</string>
    <string name="pref_security_trusted_hotspots_title">Trusted Hotspots</string>
    <string name="pref_security_untrusted_hotspots_title">Not Trusted Hotspots</string>
    <string name="pref_security_ask_install_title">Always ask while <i>install</i></string>
    <string name="pref_security_ask_install_summary">Ask before <i>install</i> command executed [rooted devices only]</string>
    <string name="pref_settings_title">Advanced settings</string>
    <string name="pref_settings_wifi_lock_title">Lock WiFi</string>
    <string name="pref_settings_wifi_lock_summary">Prevent WiFi be turned off while device sleeps</string>
    <string name="pref_about_settings">About</string>
    <string name="pref_about_credits_title">Credits</string>
    <string name="pref_about_license_title">Open source licenses</string>
    <string name="pref_about_license_summary">License details for open source software</string>
    <string name="pref_about_version" formatted="false">Version %s (%s)\nThank you for using. Enjoy!</string>
    <!-- Dialogs strings -->
    <string name="dialog_enable_wifi_title">Turn WiFi on</string>
    <string name="dialog_enable_wifi_summary">It is needed to have WiFi enabled to use this application.</string>
    <string name="dialog_enable_wifi_trusted_list_summary">It is needed to have WiFi enabled to see list of WiFi hotspots.</string>
    <string name="dialog_enable_goto_wifi_settings">WiFi settings</string>
    <!-- Starting steps -->
    <string name="help_introduce"><b>WLanAdb</b> is Wireless Android Development Bridge that allows to use standard ADB commands without connecting Android device to desktop by USB cable, installing drivers and without need to root it.</string>
    <string name="help_section_main">How to start using WLanAdb</string>
    <string name="help_main_1">Install desktop client from Downloads section of http://wlanadb.com/</string>
    <string name="help_main_2">Check that desktop client and mobile device belong to one subnetwork.</string>
    <string name="help_main_3">Launch <i>WLanAdbTerminal devices</i> from command line and check output</string>
    <string name="help_main_3_fail">If you don\'t see device at the list check that it is connected to sub-network used by desktop</string>
    <string name="help_main_4">If there is device on list you are ready to use these ADB commands: <i>logcat</i>, <i>push</i>, <i>install</i></string>
    <string name="help_main_4_note">Try <i>WLanAdbTerminal help</i> from command line to find out more details.</string>
    <string name="help_section_security">Security</string>
    <string name="help_security_1"><i>PIN</i>: allows to set keyword to protect from unauthorized connection to your mobile device.</string>
    <string name="help_security_2"><i>Trusted Hostpots</i>: it is a list of trusted hotspots where WLanAdb service will work. All other hotspots will be ignored. This allows you to automatically enable WLanAdb for home and work networks ignoring public hotspots.</string>
    <string name="help_security_3"><i>Always ask while install</i>: allows control installation process while <i>install</i> command execution. This option available for rooted devices only as far there is ability silently install applications with SU priveleges.</string>
</resources>